--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
 <pre id="saida"></pre>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, get, push } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "SUA_API_KEY",
-  authDomain: "SEU_AUTH_DOMAIN",
-  databaseURL: "SEU_DATABASE_URL",
-  projectId: "SEU_PROJECT_ID",
-  appId: "SEU_APP_ID"
+  apiKey: "AIzaSyC99A9g4nMpYzujhzZiT2xUKfdN0MAkNGY",
+  authDomain: "erro-npac-spn.firebaseapp.com",
+  databaseURL: "https://erro-npac-spn-default-rtdb.firebaseio.com",
+  projectId: "erro-npac-spn",
+  storageBucket: "erro-npac-spn.firebasestorage.app",
+  messagingSenderId: "568064054155",
+  appId: "1:568064054155:web:450e7769371ed7c6c1958e",
+  measurementId: "G-RQ6QH0B5WH"
 };
 
+// Initialize Firebase
 const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
+const analytics = getAnalytics(app);
 
 window.testar = async function () {
   const saida = document.getElementById("saida");
