--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Teste Firebase NPAC</title>
+  <title>Teste Firebase NPAC 2</title>
 </head>
 <body>
 
