--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Teste Firebase NPAC 2</title>
+  <title>Teste Firebase NPAC </title>
 </head>
 <body>
 
-<h2>Teste Firebase</h2>
-<button onclick="testar()">Executar Teste</button>
+<h2>Teste Firebase2</h2>
+<button onclick="testar()">Executar Teste2 </button>
 
 <pre id="saida"></pre>
 
