--- a/index.html
+++ b/index.html
@@ -1,60 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Teste Firebase NPAC </title>
-</head>
-<body>
-
-<h2>Teste Firebase2</h2>
-<button onclick="testar()">Executar Teste2 </button>
-
-<pre id="saida"></pre>
-
-<script type="module">
-
-// Import the functions you need from the SDKs you need
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
+export const firebaseConfig = {
   apiKey: "AIzaSyC99A9g4nMpYzujhzZiT2xUKfdN0MAkNGY",
   authDomain: "erro-npac-spn.firebaseapp.com",
   databaseURL: "https://erro-npac-spn-default-rtdb.firebaseio.com",
   projectId: "erro-npac-spn",
-  storageBucket: "erro-npac-spn.firebasestorage.app",
-  messagingSenderId: "568064054155",
-  appId: "1:568064054155:web:450e7769371ed7c6c1958e",
-  measurementId: "G-RQ6QH0B5WH"
+  appId: "1:568064054155:web:450e7769371ed7c6c1958e"
 };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-
-window.testar = async function () {
-  const saida = document.getElementById("saida");
-  saida.textContent = "Iniciando...\n";
-
-  // 1️⃣ Teste leitura allowed_users
-  const snap = await get(ref(db, "allowed_users"));
-  saida.textContent += "allowed_users:\n";
-  saida.textContent += JSON.stringify(snap.val(), null, 2) + "\n\n";
-
-  // 2️⃣ Teste escrita logs
-  await push(ref(db, "logs"), {
-    user: "teste_browser",
-    query: "sanity_check",
-    timestamp: new Date().toISOString()
-  });
-
-  saida.textContent += "Log inserido com sucesso.\n";
-};
-</script>
-
-</body>
-</html>
+export const app = initializeApp(firebaseConfig);
+export const db = getDatabase(app);
