--- a/index.html
+++ b/index.html
@@ -1,13 +1,81 @@
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Consultar Erro NPAC SPN</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-export const firebaseConfig = {
-  apiKey: "AIzaSyC99A9g4nMpYzujhzZiT2xUKfdN0MAkNGY",
-  authDomain: "erro-npac-spn.firebaseapp.com",
-  databaseURL: "https://erro-npac-spn-default-rtdb.firebaseio.com",
-  projectId: "erro-npac-spn",
-  appId: "1:568064054155:web:450e7769371ed7c6c1958e"
+<header>Consultar Erro NPAC SPN</header>
+
+<div class="container">
+  <input id="nome" placeholder="Digite seu nome">
+  <button id="btnEntrar">Entrar</button>
+
+  <div id="areaConsulta" style="display:none">
+    <input id="busca" placeholder="Erro em PT / EN / Código">
+    <button id="btnConsultar">Consultar</button>
+    <div id="resultado"></div>
+  </div>
+</div>
+
+<script type="module">
+import { db } from "./firebase.js";
+import { ref, get, push } 
+  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+let usuario = "";
+
+document.getElementById("btnEntrar").onclick = async () => {
+  const nome = document.getElementById("nome").value.trim().toLowerCase();
+
+  if (!/^[a-zà-ÿ ]{3,}$/.test(nome)) {
+    alert("Nome inválido");
+    return;
+  }
+
+  const snap = await get(ref(db, "allowed_users/" + nome));
+  if (!snap.exists()) {
+    alert("Usuário não autorizado");
+    return;
+  }
+
+  usuario = nome;
+  document.getElementById("areaConsulta").style.display = "block";
 };
 
-export const app = initializeApp(firebaseConfig);
-export const db = getDatabase(app);
+document.getElementById("btnConsultar").onclick = async () => {
+  const termo = document.getElementById("busca").value.toLowerCase();
+  const snap = await get(ref(db, "errors"));
+  let html = "";
+
+  snap.forEach(e => {
+    if (e.key === "_init") return;
+    const d = e.val();
+    if (
+      d.pt.toLowerCase().includes(termo) ||
+      d.en.toLowerCase().includes(termo) ||
+      d.code.toLowerCase().includes(termo)
+    ) {
+      html += `
+        <div class="result">
+          <b>${d.code}</b><br>
+          PT: ${d.pt}<br>
+          EN: ${d.en}
+        </div>`;
+    }
+  });
+
+  document.getElementById("resultado").innerHTML = html || "Nenhum resultado.";
+
+  await push(ref(db, "logs"), {
+    user: usuario,
+    query: termo,
+    timestamp: new Date().toISOString()
+  });
+};
+</script>
+
+</body>
+</html>
