--- a/user.html
+++ b/user.html
@@ -294,11 +294,28 @@
 
     document.getElementById('currentUser').textContent = `👤 ${currentUser}`;
 
+    // Adicionar botão Admin se for admin
+    if (isAdmin) {
+      const adminBtn = document.createElement('button');
+      adminBtn.textContent = '⚙️ Admin';
+      adminBtn.className = 'btn-logout';
+      adminBtn.style.background = '#667eea';
+      adminBtn.style.marginRight = '10px';
+      adminBtn.addEventListener('click', () => {
+        window.location.href = 'admin.html';
+      });
+      document.querySelector('.user-info').insertBefore(adminBtn, logoutBtn);
+    }
+
     const searchInput = document.getElementById('searchInput');
     const searchBtn = document.getElementById('searchBtn');
     const clearBtn = document.getElementById('clearBtn');
     const results = document.getElementById('results');
     const logoutBtn = document.getElementById('logoutBtn');
+
+    // Lista de admins
+    const ADMIN_USERS = ['helio_he710', 'admin'];
+    const isAdmin = ADMIN_USERS.includes(currentUser);
 
     console.log('=== USER PAGE CARREGADA ===');
     console.log('Usuário:', currentUser);
