--- a/index.html
+++ b/index.html
@@ -103,15 +103,6 @@
       box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
     }
 
-    .btn-secondary {
-      background: #6c757d;
-      color: white;
-    }
-
-    .btn-secondary:hover {
-      background: #5a6268;
-    }
-
     .message {
       margin-top: 15px;
       padding: 12px;
@@ -248,7 +239,7 @@
         console.log('Firebase respondeu:', snapshot.exists());
         
         if (!snapshot.exists()) {
-          showMessage('❌ Nenhum usuário cadastrado. Use o painel Admin.', 'error');
+          showMessage('❌ Nenhum usuário cadastrado no sistema.', 'error');
           debugInfo.innerHTML = '⚠️ Firebase conectado, mas sem usuários cadastrados';
           return;
         }
@@ -272,7 +263,7 @@
             }
           }, 500);
         } else {
-          showMessage(`❌ Usuário "${username}" não autorizado. Use o painel Admin para cadastrar.`, 'error');
+          showMessage(`❌ Usuário "${username}" não autorizado.`, 'error');
           debugInfo.innerHTML = `❌ Usuário não encontrado em: ${Object.keys(users).join(', ')}`;
         }
       } catch (error) {
@@ -282,14 +273,8 @@
       }
     }
 
-    // Admin
-    function handleAdmin() {
-      window.location.href = 'admin.html';
-    }
-
     // Eventos
     loginBtn.addEventListener('click', handleLogin);
-    adminBtn.addEventListener('click', handleAdmin);
     
     usernameInput.addEventListener('keypress', (e) => {
       if (e.key === 'Enter') handleLogin();
@@ -312,7 +297,7 @@
           debugInfo.innerHTML = `✅ Firebase conectado<br>📋 Usuários cadastrados: <strong>${users.join(', ')}</strong>`;
           console.log('Usuários disponíveis:', users);
         } else {
-          debugInfo.innerHTML = '⚠️ Firebase conectado, mas <strong>nenhum usuário cadastrado</strong><br>💡 Use o botão "Acesso Admin" para adicionar usuários';
+          debugInfo.innerHTML = '⚠️ Firebase conectado, mas <strong>nenhum usuário cadastrado</strong>';
         }
       } catch (error) {
         debugInfo.innerHTML = `❌ Erro ao conectar: ${error.message}`;
