--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <input 
           type="text" 
           id="username" 
-          placeholder="Digite seu nome (ex: helio_he710)"
+          placeholder="Digite seu login (ex: inaiara_npac)
           autocomplete="off"
         >
         <small class="hint">Aceita letras, números e underscore</small>
