--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #021468 0%, #856aa3 100%);
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
       padding: 20px;
     }
@@ -292,9 +292,31 @@
       window.location.href = 'index.html';
     }
 
-    // Lista de admins (DECLARAR ANTES DE USAR)
-    const ADMIN_USERS = ['helio_he710', 'admin'];
-    const isAdmin = ADMIN_USERS.includes(currentUser);
+    // Verificar se é admin no Firebase
+    let isAdmin = false;
+    
+    async function checkAdmin() {
+      try {
+        const adminRef = ref(db, 'admin_users');
+        const snapshot = await get(adminRef);
+        isAdmin = snapshot.exists() && snapshot.val()[currentUser] === true;
+        
+        if (isAdmin) {
+          // Adicionar botão Admin
+          const adminBtn = document.createElement('button');
+          adminBtn.textContent = '⚙️ Admin';
+          adminBtn.className = 'btn-logout';
+          adminBtn.style.background = '#667eea';
+          adminBtn.style.marginRight = '10px';
+          adminBtn.addEventListener('click', () => {
+            window.location.href = 'admin.html';
+          });
+          document.querySelector('.user-info').insertBefore(adminBtn, logoutBtn);
+        }
+      } catch (error) {
+        console.error('Erro ao verificar admin:', error);
+      }
+    }
 
     document.getElementById('currentUser').textContent = `👤 ${currentUser}`;
 
@@ -304,22 +326,11 @@
     const results = document.getElementById('results');
     const logoutBtn = document.getElementById('logoutBtn');
 
-    // Adicionar botão Admin se for admin
-    if (isAdmin) {
-      const adminBtn = document.createElement('button');
-      adminBtn.textContent = '⚙️ Admin';
-      adminBtn.className = 'btn-logout';
-      adminBtn.style.background = '#667eea';
-      adminBtn.style.marginRight = '10px';
-      adminBtn.addEventListener('click', () => {
-        window.location.href = 'admin.html';
-      });
-      document.querySelector('.user-info').insertBefore(adminBtn, logoutBtn);
-    }
+    // Verificar permissão admin
+    checkAdmin();
 
     console.log('=== USER PAGE CARREGADA ===');
     console.log('Usuário:', currentUser);
-    console.log('É admin:', isAdmin);
     console.log('Botões encontrados:', {
       searchBtn: !!searchBtn,
       clearBtn: !!clearBtn,
